Completed Intermediate CSS section, beginning Bootstrap

--- a/CSS/font.html
+++ b/CSS/font.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <title></title>
 </head>
@@ -14,6 +16,8 @@
 
     <h1>Fonts Demo Page</h1>
 
+    <p>Lorem ipsum, <span>dolor sit amet consectetur</span> adipisicing elit. Eos, amet. Deleniti ipsum placeat tenetur sed consequuntur, expedita iure facilis, exercitationem aspernatur accusantium dolorem totam reprehenderit fuga debitis aperiam veniam quos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus esse maxime alias! Doloribus eaque temporibus exercitationem, magni nihil debitis nemo asperiores molestiae, aspernatur perferendis deserunt cupiditate quod nulla fuga aliquid.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium magni deleniti provident aperiam nemo laborum excepturi dolor fugiat explicabo exercitationem voluptates, dolorem neque vero non. Ipsam cum iusto sequi nesciunt?Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores atque, autem quasi ut fugiat voluptate ex aperiam adipisci eligendi dolorem necessitatibus magnam magni. Quis, repudiandae unde id voluptatibus at consequuntur Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, magnam illo soluta dolore est reiciendis at consequatur doloribus ab debitis. Vel impedit harum mollitia nihil quaerat maxime tempora cupiditate eligendi!</p>
 </body>
 
 </html>
